<resources>
    <string name="app_name">Pegadaian Digital</string>
    <string name="default_notification_channel_id">pd_notification_chnl</string>
    <string name="facebook_app_id">2659089797453043</string>
    <string name="clevertap_acc_id">TEST-W86-997-K75Z</string>
    <string name="clevertap_token">TEST-acc-6b0</string>
    <string name="clevertap_use_google_ad_id">1</string>
    <string name="GOOGLE_GEO_KEY">AIzaSyDHJkgUjjtBhy3d4JxX7RyABG9V2dXyCpk</string>
    <string name="txtTabunganEmas">Layanan pembelian dan penjualan emas dengan fasilitas \n
        titipan dengan harga yang terjangkau. Mulai dari 5000-an, sudah\n bisa punya emas!</string>
    <string name="txtKredit">Perlu Dana Tunai yang Cepat, Aman &amp; Murah? Jangan jual \n
        barang kesayangan anda. Gadaikan saja di Pegadaian </string>
    <string name="txtPinjaman">Jangan biarkan masalah modal menghambat usaha Anda. \n
        Ajukan pembiayaan yang tepat melalui Pegadaian</string>
    <string name="txtMPO">Bayar telepon, listrik, air dan tagihan lainnya melalui \n
        aplikasi Pegadaian Digital</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_notification">Notifikasi</string>
    <string name="title_profile">Profil</string>
    <string name="txt_kudaponi">Kuda Poni</string>
    <string name="txt_gticket">G-Ticket</string>
    <string name="txt_registration">Registrasi</string>
    <string name="txt_howtoplay">How to Play</string>
    <string name="txt_leaderboard">Leaderboard</string>
    <string name="txt_agree">Setuju</string>
    <string name="txt_gpoint">G-Point</string>
    <string name="txt_redeem">Redeem Voucher</string>
    <string name="txt_notifotp">Silahkan tunggu,
        kode verifikasi akan dikirimkan ke nomor 081313131313</string>
    <string name="txt_notifwarning">Kami akan mengirimkan e-mail verifikasi, silahkan cek inbox anda untuk melakukan verifikasi.
    Anda tidak bisa melakukan login menggunakan email, jika email belum diverifikasi</string>
    <string name="txt_title_termncon">TERMS &amp; CONDITIONS KUDA PONI\n</string>
    <string name="txt_termncon"> 1. Kuda Poni hanya dapat diakses oleh pengguna aplikasi Pegadaian Digital Service yang memiliki G-Ticket.\n\n
        2. G-Ticket diperoleh dari melakukan transaksi minimum 50.000.\n\n
        3. G-Ticket ditukarkan dengan bermain KUDA PONI untuk mendapatkan point.\n\n
        4. Kuda poni adalah kuis untuk pengguna menjawab pertanyaan dari dua jawaban yang tersedia\n\n
        5. Jika pengguna dapat menjawab maka mendapatkan point, sebaliknya jika user gagal tidak mendapatkan point.\n\n
        6. Point dapat dikumpulkan dan direedem dengan voucher yang tersedia untuk discount transaksi selanjutnya.\n\n
        7. G-Ticket dan G-Point berlaku selama satu tahun akan direset di awal tahun.</string>

    <string-array name="array_profile">
        <item>Data Nasabah</item>
        <item>Data NPWP</item>
        <item>Data SID</item>
        <item>Password &amp; PIN</item>
        <item>Rekening Saya</item>
        <item>Rekening Favorit</item>
        <item>Voucher</item>
        <item>Logout</item>
    </string-array>

    <string-array name="array_profile_bottom">
        <item>Hubungi Kami</item>
        <item>Keluar</item>
    </string-array>

</resources>
