<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home_navigation"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/refresh_navigation"
            android:title="@string/title_history" />

        <item
            android:id="@+id/navigation_notification"
            android:icon="@drawable/notification_navigation"
            android:title="@string/title_notification" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/profile_navigation"
            android:title="@string/title_profile" />
</menu>