<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_pds"
    app:startDestination="@id/navigation_home"
    app:navGraph="@navigation/navigation_pds">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cardviewmenu.mainfragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.cardviewmenu.mainfragments.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.cardviewmenu.mainfragments.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cardviewmenu.mainfragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>