<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="325dp"
    android:layout_height="500dp"
    android:background="@color/grey"
    android:layout_gravity="center"
    android:padding="10dp">
<TextView
    android:id="@+id/txtTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_title_termncon"
    android:textAlignment="center"
    android:layout_centerHorizontal="true"
    android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_termncon"
        android:textAlignment="inherit"
        android:layout_below="@id/txtTitle"
        />
    <TextView
        android:id="@+id/txtAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_agree"
        android:layout_below="@id/txtList"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_alignRight="@id/txtList"/>
</RelativeLayout>